# aml-sentinel-sut

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_system_architecture.md  02_data_flows.md  03_implementation_roadmap.md  04_data_generation.md
go-screening/: Dockerfile  go.mod  go.sum  main.go  scorer.go  scorer_test.go
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_dead_letter.py  f6179be56627_initial_schema.py
mocks/: Dockerfile  __init__.py
mocks/alert_sink/: app.py
mocks/comply_advantage/: app.py
mocks/dow_jones/: app.py
mocks/provider_mock/: __init__.py  app.py
mocks/world_check/: app.py
scripts/: bootstrap_topics.sh  create_topics.py  verify_phase10.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py  verify_phase8.py
src/aml_sentinel/: __init__.py  config.py  events.py  ids.py
src/aml_sentinel/api/: deps.py  main.py  schemas.py
src/aml_sentinel/db/: base.py  models.py  seed_smoke.py
src/aml_sentinel/decisioning/: rules.py
src/aml_sentinel/matching/: countries.py  fuzzy.py  normalize.py
src/aml_sentinel/observability/: app.py  dead_letter.py  logging.py  metrics.py  monitors.py
tests/: conftest.py  helpers.py
tests/dq/: test_data_quality.py  test_dataset_quality.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_gateway_mocks.py  test_idempotency.py
tests/reconciliation/: test_reconciliation.py
tests/unit/: test_decision_rules.py  test_fuzzy.py  test_logging.py  test_normalization.py
tools/datagen/: __init__.py  __main__.py  decisions_golden.py  matching_golden.py  normalization_golden.py  updates.py  validate.py  watchlists.py
(+7 files in other folders)
