[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aml-sentinel"
version = "0.1.0"
description = "AML-Sentinel SUT — Anti-Money Laundering screening service for SDET practice"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    # Messaging
    "aiokafka>=0.11.0",
    "confluent-kafka>=2.6.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # Cache
    "redis>=5.2.0",
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    # Data / matching
    "rapidfuzz>=3.10.0",
    "unidecode>=1.3.8",
    "faker>=33.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Utilities
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "allure-pytest>=2.13.5",
    "testcontainers[postgres,redis,kafka]>=4.8.0",
    "httpx>=0.27.0",
    "freezegun>=1.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aml_sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["aml_sentinel", "tools", "mocks"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates long single-line column definitions; don't fight it.
"migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
